React react-example

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Course 3</title>
+        <link rel="stylesheet" href="/assets/plain-css2.css" />
     </head>
     <body>
         <div id="root-c3"/>
